fix: harden security for API keys, sessions, and XSS
Derive session encryption from APP_ENCRYPTION_KEY, enable CSRF with cookie tokens, restrict CORS to configured origins, and sanitize LLM output in the UI.

Add request validation, session-scoped database isolation, generic error responses, SameSite cookies, and extended rate limiting. Remove unused JWT dependencies.